Complete design for login_path view

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,9 +4,6 @@
     height: 60vh;
 }
 
-#message_box{
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    left: 10px;
+.top{
+    margin-top: 30px;
 }
