--- a/app/views/chatroom/_text_box.html.erb
+++ b/app/views/chatroom/_text_box.html.erb
@@ -12,7 +12,7 @@
         <div class="field">
             <div class="ui flui icon input">
                 <%= f.text_field :message, class: "ui input"%>
-                <i class="bordered inverted orange edit icon"></i>
+                <i class="bordered inverted blue edit icon"></i>
             </div>
         </div>
     <% end %>
