--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,24 +1,22 @@
 <div class="ui inverted large menu">
     <div class="ui container">
-        <a class="item">
-            Chatroom
-        </a>
+        <%= link_to "Chatroom", root_path, class: "item" %>
         <a class="item">
             Messages
         </a>
         <div class="right menu">
-                <div class="ui dropdown item">
-                    Account <i class="dropdown icon"></i>
-                    <div class="menu">
-                        <%= link_to "Log in", login_path, class: "item"%>
-                        <a class="item">Log out</a>
-                    </div>
-                </div>
-                <div class= "item">
-                    <a class="ui primary button">
-                        Sign up
-                    </a>
+            <div class="ui dropdown item">
+                Account <i class="dropdown icon"></i>
+                <div class="menu">
+                    <%= link_to "Log in", login_path, class: "item"%>
+                    <a class="item">Log out</a>
                 </div>
             </div>
+            <div class= "item">
+                <a class="ui primary button">
+                    Sign up
+                </a>
+            </div>
+        </div>
     </div>
 </div>
