Adding Chatroom and chatroom_member tables, models, and relations. Also added message_id column to Messages table

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,3 +7,18 @@
 .top{
     margin-top: 30px;
 }
+
+#message-board{
+    height: 45vh;
+    overflow: auto;
+}
+
+.message{
+    margin: 5px 0;
+}
+
+#send-button{
+    margin: 0
+}
+
+
