--- a/app/views/chatroom/_chat_menu.html.erb
+++ b/app/views/chatroom/_chat_menu.html.erb
@@ -12,7 +12,7 @@
     <div class="four wide column">
         <div class="ui fluid raised card chatbox">
             <div class= "content">
-                <div class= "ui inverted vertical menu">
+                <div class= "ui inverted fluid vertical menu">
                     <%= link_to "Get friends", login_path, class: "item" %>
                     <%= link_to "Get friends", login_path, class: "item" %>
                     <%= link_to "Get friends", login_path, class: "item" %>
