--- a/app/views/chatroom/_text_box.html.erb
+++ b/app/views/chatroom/_text_box.html.erb
@@ -1,18 +1,17 @@
-<div class="content">
-    <div class="ui feed">
-        <div class="event">
-            <div class="content">
-                You added Elliot Fu to the group <a>Coworkers</a>
-            </div>
-        </div>
+<div class="content" id="message-board">
+    <div class="ui feed" id= "message-display">
+        <%= render @messages %>
     </div>
 </div>
 <div class="extra content">
-    <%= form_with url: root_path, method: :get, local: true, class: "ui reply form" do |f|%>
+    <%= form_with(model: @message, html: {class: "ui reply form", role: "form"}, url: message_path, remote: true) do |f|%>
         <div class="field">
-            <div class="ui flui icon input">
-                <%= f.text_field :message, class: "ui input"%>
-                <i class="bordered inverted blue edit icon"></i>
+            <div class="ui fluid icon input">
+                <%= f.text_field :body, class: "ui input"%>
+                <%= f.button class: 'ui tiny button primary' do %>
+                    <i class="edit icon" id="send-button"></i>
+                <% end %>
+
             </div>
         </div>
     <% end %>
