--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,18 +5,19 @@
             Messages
         </a>
         <div class="right menu">
-            <div class="ui dropdown item">
-                Account <i class="dropdown icon"></i>
-                <div class="menu">
-                    <%= link_to "Log in", login_path, class: "item"%>
-                    <a class="item">Log out</a>
+            <% if !logged_in? %>
+                <%= link_to "Log in", login_path, class: "item"%>
+                <div class= "item">
+                    <%= link_to "Sign up", signup_path, class: "ui primary button" %>
                 </div>
-            </div>
-            <div class= "item">
-                <a class="ui primary button">
-                    Sign up
-                </a>
-            </div>
+            <% else %>
+                <div class="ui dropdown item">
+                    Account <i class="dropdown icon"></i>
+                    <div class="menu">
+                            <%= link_to "Log out", logout_path, method: :delete, class: "item"%>
+                    </div>
+                </div>
+                    <% end %>
         </div>
     </div>
 </div>
