--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <%= render 'layouts/navbar'%>
     <div class="ui container">
+      <%= render 'layouts/flash_messages' %>
       <%= yield %>
     </div>
   </body>
