--- a/app/views/chatrooms/_chat_menu.html.erb
+++ b/app/views/chatrooms/_chat_menu.html.erb
@@ -11,11 +11,9 @@
     </div>
     <div class="four wide column">
         <div class="ui fluid raised card chatbox">
-            <div class= "content">
+            <div class= "ui content">
                 <div class= "ui inverted fluid vertical menu">
-                    <%= link_to "Get friends", login_path, class: "item" %>
-                    <%= link_to "Get friends", login_path, class: "item" %>
-                    <%= link_to "Get friends", login_path, class: "item" %>
+                <%= render @chatrooms %>
                 </div>
             </div>
         </div>
