View changes to accomodate chatroom functionalities in controllers and models. Added system test for real time chat functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,12 +13,30 @@
     overflow: auto;
 }
 
+#chatroom-board{
+    overflow: auto;
+}
+
 .message{
-    margin: 5px 0;
+    overflow-wrap: anywhere;
+}
+
+.msg{
+    color: grey
+}
+
+.event{
+    margin-bottom: 10px;
+}
+
+.content.user.message{
+    text-align: right;
 }
 
 #send-button{
     margin: 0
 }
 
-
+.ui.card.chatpreview{
+    width: 100%;
+}
