Added frontend functionality for user chatroom creation

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,3 +40,16 @@
 .ui.card.chatpreview{
     width: 100%;
 }
+
+#user {
+    margin-top: 10px;
+}
+
+.center-aligned{
+    display: flex !important;
+    justify-content: center !important;
+}
+
+.chatroom-options{
+    padding: 50px
+}
