--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
                 </div>
             <% else %>
                 <div class="ui dropdown item">
-                    Account <i class="dropdown icon"></i>
+                    <%=current_user.username%> <i class="dropdown icon"></i>
                     <div class="menu">
                             <%= link_to "Log out", logout_path, method: :delete, class: "item"%>
                     </div>
