--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,6 +4,9 @@
             <div class="fourteen wide column raised <%= "right floated" if current_user == message.user%>">
                 <div class = "ui <%= current_user == message.user ? "blue right floated" : "compact" %> message">
                     <strong><em><%= message.user.username %>:</em></strong> <%= message.body %>
+                    <div class="tiny right aligned msg">
+                        <%= message.created_at.to_time.to_s(:time)%>
+                    </div>
                 </div>
             </div>
         </div>
