--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
                     <%= link_to "Sign up", signup_path, class: "ui primary button" %>
                 </div>
             <% else %>
-                <div class="ui dropdown item">
+                <div class="ui dropdown item" id= "user">
                     <%=current_user.username%> <i class="dropdown icon"></i>
                     <div class="menu">
                             <%= link_to "Log out", logout_path, method: :delete, class: "item"%>
