Added a footer to the layout

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,3 +68,13 @@
     box-shadow: none !important;
     padding-bottom: 0 !important;
 }
+
+.straight-border{
+    border-radius: 0 !important;
+}
+
+#footer{
+    width: 100vw;
+    position: absolute;
+    bottom: 0;
+}
